# py_synthsr

./: README.md  py_synthsr  pyproject.toml  requirements.txt
py_synthsr/: cli.py
