[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "py_synthsr"
version = "2.0"
description = "SynthSR implementation for generating synthetic 1mm MP-RAGE from MRI scans of any contrast and resolution."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9, <3.14"
license = { text = "BSD-2-Clause" }

dependencies = [
  "numpy",
  "nibabel",
  "scipy",
  "tensorflow"
]

[project.scripts]
py_synthsr = "py_synthsr.cli:main"

[tool.setuptools.package-data]
"py_synthsr" = ["models/*.h5"]